test/visibility/except/literalExcept.good
literalExcept.chpl:6: syntax error: incorrect expression in 'except' list, identifier expected
